--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/upgradeable-proxy"]
 	path = lib/upgradeable-proxy
 	url = https://github.com/marsfoundation/upgradeable-proxy
+[submodule "lib/dss-allocator"]
+	path = lib/dss-allocator
+	url = https://github.com/makerdao/dss-allocator
