feat: Add AllocatorVault mint/burn NST basic functionality and testing structure (SC-493) (#2)
* forge install: upgradeable-proxy

* feat: initial setup with ACL

* feat: update readme

* fix: add relayer coverage

* forge install: dss-allocator

* feat: add allocator

* forge install: nst

* feat: add nst

* forge install: erc20-helpers

* feat: working setUp

* feat: working draw call

* feat: working draw and wipe functionality, with testing

* fix: rm unneeded acl test

* forge install: sdai

* forge install: openzeppelin-contracts

v5.0.2

* fix: update to add OZ roles

* chore: add note

* feat: add remappings

* fix: rm upgradeability

* chore: rm sub

* feat: strip out all upgradeability

* feat: update to use hashed roles

* fix: add constructor support

* fix: update per review

* fix: formatting

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,18 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/dss-allocator"]
+	path = lib/dss-allocator
+	url = https://github.com/makerdao/dss-allocator
+[submodule "lib/nst"]
+	path = lib/nst
+	url = https://github.com/makerdao/nst
+[submodule "lib/erc20-helpers"]
+	path = lib/erc20-helpers
+	url = https://github.com/marsfoundation/erc20-helpers
+[submodule "lib/sdai"]
+	path = lib/sdai
+	url = https://github.com/makerdao/sdai
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
 	url = https://github.com/openzeppelin/openzeppelin-contracts
