--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "lib/sdai"]
 	path = lib/sdai
 	url = https://github.com/makerdao/sdai
+[submodule "lib/dss-lite-psm"]
+	path = lib/dss-lite-psm
+	url = https://github.com/makerdao/dss-lite-psm
