--- a/foundry.toml
+++ b/foundry.toml
@@ -6,7 +6,8 @@ solc_version = '0.8.21'
 optimizer = true
 optimizer_runs = 200
 remappings = [
-    "dss-test/=lib/dss-allocator/lib/dss-test/src/"
+    "dss-test/=lib/dss-allocator/lib/dss-test/src/",
+    "nst/=lib/nst/"
 ]
 
 [fuzz]
