feat: Refactor to integration testing setup (SC-567) (#7)
* feat: restructure dirs

* feat: rm all unneeded setup logic

* fix: rename dir

* chore: rm unused subs

* feat: update sub to get deploy scripts

* feat: get shared allocation system instance deployed

* forge install: nst

* feat: add initial deployment scripts

* feat: add initial deployment scripts

* feat: ilk init working

* feat: start to add rest of system

* forge install: sdai

* feat: full deployment working

* feat: working tests for draw

* feat: burn working

* feat: psm calls working

* feat: update to work, swapping DAI instead of NST

* feat: comment out tests for swaps

* fix: update per merge

* feat: update to add back tests

* feat: make first round of changes

* feat: tests passing with dainst

* formatting: reorder variables

* fix: update per review

* fix: update with changes

--- a/foundry.toml
+++ b/foundry.toml
@@ -6,32 +6,9 @@ solc_version = '0.8.21'
 optimizer = true
 optimizer_runs = 200
 remappings = [
-    "openzeppelin-contracts/=lib/openzeppelin-contracts/",
-    "upgradeable-proxy/=lib/upgradeable-proxy/src/",
-    "forge-std/=lib/forge-std/src/",
-    "@openzeppelin/contracts-upgradeable/=lib/sdai/lib/openzeppelin-contracts-upgradeable/contracts/",
-    "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
-    "ds-auth/=lib/dss/lib/ds-token/lib/ds-auth/src/",
-    "ds-math/=lib/dss/lib/ds-token/lib/ds-math/src/",
-    "ds-note/=lib/dss/lib/ds-value/lib/ds-thing/lib/ds-note/src/",
-    "ds-test/=lib/dss/lib/ds-test/src/",
-    "ds-thing/=lib/dss/lib/ds-value/lib/ds-thing/src/",
-    "ds-token/=lib/dss/lib/ds-token/src/",
-    "ds-value/=lib/dss/lib/ds-value/src/",
-    "dss-allocator/=lib/dss-allocator/",
-    "dss-interfaces/=lib/sdai/lib/dss-test/lib/dss-interfaces/src/",
-    "dss-test/=lib/sdai/lib/dss-test/src/",
-    "dss/=lib/dss/src/",
-    "erc20-helpers/=lib/erc20-helpers/src/",
-    "erc4626-tests/=lib/sdai/lib/erc4626-tests/",
-    "forge-std/=lib/forge-std/src/",
+    "dss-test/=lib/dss-allocator/lib/dss-test/src/",
     "nst/=lib/nst/",
-    "openzeppelin-contracts-upgradeable/=lib/sdai/lib/openzeppelin-contracts-upgradeable/",
-    "openzeppelin-contracts/=lib/openzeppelin-contracts/",
-    "openzeppelin-foundry-upgrades/=lib/sdai/lib/openzeppelin-foundry-upgrades/src/",
-    "sdai/=lib/sdai/",
-    "solidity-stringutils/=lib/sdai/lib/openzeppelin-foundry-upgrades/lib/solidity-stringutils/",
-    "token-tests/=lib/sdai/lib/token-tests/src/"
+    "sdai/=lib/sdai/"
 ]
 
 [fuzz]
