--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "lib/sdai"]
 	path = lib/sdai
 	url = https://github.com/makerdao/sdai
+[submodule "lib/spark-psm"]
+	path = lib/spark-psm
+	url = https://github.com/marsfoundation/spark-psm
