--- a/foundry.toml
+++ b/foundry.toml
@@ -8,7 +8,8 @@ optimizer_runs = 200
 remappings = [
     "dss-test/=lib/dss-allocator/lib/dss-test/src/",
     "nst/=lib/nst/",
-    "sdai/=lib/sdai/"
+    "sdai/=lib/sdai/",
+    "spark-psm/=lib/spark-psm/"
 ]
 
 [fuzz]
