fix: update all to base, get first cross chain messaging working

--- a/foundry.toml
+++ b/foundry.toml
@@ -9,7 +9,8 @@ remappings = [
     "dss-test/=lib/dss-allocator/lib/dss-test/src/",
     "nst/=lib/nst/",
     "sdai/=lib/sdai/",
-    "spark-psm/=lib/spark-psm/"
+    "spark-psm/=lib/spark-psm/",
+    "xchain-helpers/=lib/xchain-helpers/",
 ]
 
 [fuzz]
