--- a/foundry.toml
+++ b/foundry.toml
@@ -7,7 +7,7 @@ optimizer = true
 optimizer_runs = 200
 remappings = [
     "dss-test/=lib/dss-allocator/lib/dss-test/src/",
-    "nst/=lib/nst/",
+    "usds/=lib/usds/",
     "sdai/=lib/sdai/",
     "spark-psm/=lib/spark-psm/",
     "xchain-helpers/=lib/xchain-helpers/",
