chore: Update naming to USDS convention (SC-622) (#17)
* feat: first round of changes

* feat: update allocator

* chore: rm nst

* forge install: usds

* chore: rm sdai

* forge install: sdai

* feat: update susds

* feat: tests passing

* fix: replace remaining nst

* fix: update alignment

* fix: remaining renames

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,15 +7,15 @@
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
 	url = https://github.com/openzeppelin/openzeppelin-contracts
-[submodule "lib/nst"]
-	path = lib/nst
-	url = https://github.com/makerdao/nst
-[submodule "lib/sdai"]
-	path = lib/sdai
-	url = https://github.com/makerdao/sdai
 [submodule "lib/spark-psm"]
 	path = lib/spark-psm
 	url = https://github.com/marsfoundation/spark-psm
 [submodule "lib/xchain-helpers"]
 	path = lib/xchain-helpers
 	url = https://github.com/marsfoundation/xchain-helpers
+[submodule "lib/usds"]
+	path = lib/usds
+	url = https://github.com/makerdao/usds
+[submodule "lib/sdai"]
+	path = lib/sdai
+	url = https://github.com/makerdao/sdai
