mint usds working

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,7 @@
-# Compiler files
 cache/
 out/
-
-# Ignores development broadcast logs
 /broadcast
-
-# Docs
 docs/
-
-# Dotenv file
 .env
-
 lcov.info
+script/output/*/*.json
