--- a/foundry.toml
+++ b/foundry.toml
@@ -5,7 +5,7 @@ libs = ["lib"]
 solc_version = '0.8.21'
 optimizer = true
 optimizer_runs = 200
-assertions_revert = true
+assertions_revert = false
 remappings = [
     "dss-test/=lib/dss-allocator/lib/dss-test/src/",
     "usds/=lib/usds/",
