--- a/foundry.toml
+++ b/foundry.toml
@@ -7,6 +7,7 @@ optimizer = true
 optimizer_runs = 200
 assertions_revert = false
 remappings = [
+    "dss-allocator/=lib/dss-allocator/",
     "dss-test/=lib/dss-allocator/lib/dss-test/src/",
     "usds/=lib/usds/",
     "sdai/=lib/sdai/",
