--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
-# Compiler files
 cache/
 out/
-
-# Ignores development broadcast logs
-!/broadcast
-/broadcast/*/31337/
-/broadcast/**/dry-run/
-
-# Docs
+/broadcast
 docs/
-
-# Dotenv file
 .env
-
 lcov.info
+script/output/*/*.json
+!script/output/*/*-release-*.json
