--- a/foundry.toml
+++ b/foundry.toml
@@ -7,11 +7,16 @@ optimizer = true
 optimizer_runs = 200
 assertions_revert = false
 remappings = [
+    "dss-allocator/=lib/dss-allocator/",
     "dss-test/=lib/dss-allocator/lib/dss-test/src/",
     "usds/=lib/usds/",
     "sdai/=lib/sdai/",
     "spark-psm/=lib/spark-psm/",
     "xchain-helpers/=lib/xchain-helpers/",
+]
+fs_permissions = [
+    { access = "read", path = "./script/input/"},
+    { access = "read-write", path = "./script/output/"}
 ]
 
 [fuzz]
