feat: add test coverage for configurations

--- a/foundry.toml
+++ b/foundry.toml
@@ -5,7 +5,7 @@ libs = ["lib"]
 solc_version = '0.8.21'
 optimizer = true
 optimizer_runs = 200
-assertions_revert = false
+# assertions_revert = false
 remappings = [
     "dss-allocator/=lib/dss-allocator/",
     "dss-test/=lib/dss-test/src/",
