--- a/foundry.toml
+++ b/foundry.toml
@@ -22,4 +22,12 @@ fs_permissions = [
 [fuzz]
 runs = 1000
 
+[etherscan]
+mainnet = { key = "${ETHERSCAN_API_KEY}" }
+optimism = { key = "${OPTIMISMSCAN_API_KEY}" }
+base = { key = "${BASESCAN_API_KEY}" }
+gnosis_chain = { key = "${GNOSISSCAN_API_KEY}", url = "https://api.gnosisscan.io/api" }
+arbitrum_one = { key = "${ARBISCAN_API_KEY}" }
+world_chain = { key = "${WORLD_CHAIN_API_KEY}", chain = 480, url = "https://worldchain-mainnet-explorer.alchemy.com/api" }
+
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
