feat: update to get shanghai to pass

--- a/foundry.toml
+++ b/foundry.toml
@@ -18,6 +18,7 @@ fs_permissions = [
     { access = "read", path = "./script/input/"},
     { access = "read-write", path = "./script/output/"}
 ]
+evm_version = 'shanghai'
 
 [fuzz]
 runs = 1000
