--- a/foundry.toml
+++ b/foundry.toml
@@ -2,14 +2,14 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-solc_version = '0.8.21'
+solc_version = '0.8.25'
 optimizer = true
 optimizer_runs = 200
 fs_permissions = [
     { access = "read", path = "./script/input/"},
     { access = "read-write", path = "./script/output/"}
 ]
-evm_version = 'shanghai'
+evm_version = 'paris'
 
 [fuzz]
 runs = 1000
